--- a/web-app/public/global.css
+++ b/web-app/public/global.css
@@ -6,8 +6,11 @@ html, body {
 
 body {
 	color: #333;
+	background-color: #E5EAFF;
+	display: flex;
+	justify-content: center;
+	padding: 10vh;
 	margin: 0;
-	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
