--- a/web-app/public/global.css
+++ b/web-app/public/global.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
+
+:root {
+--black: #181B2B;
+--white: #ffffff;
+--violet: #5275FF;
+--violet-disabled: #E5EAFF;
+--border: #E7EAF3;
+--light-background: #F9FAFC;
+--grey: #7A859E;
+}
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -5,14 +17,14 @@ html, body {
 }
 
 body {
-	color: #333;
-	background-color: #E5EAFF;
+	color: var(--black);
+	background-color: var(--violet-disabled);
 	display: flex;
 	justify-content: center;
 	padding: 10vh;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: Rubik, sans-serif;
 }
 
 a {
@@ -30,6 +42,7 @@ a:visited {
 
 label {
 	display: block;
+	width: 100%;
 }
 
 input, button, select, textarea {
@@ -38,12 +51,18 @@ input, button, select, textarea {
 	padding: 0.4em;
 	margin: 0 0 0.5em 0;
 	box-sizing: border-box;
-	border: 1px solid #ccc;
+	border: 1px solid var(--violet);
 	border-radius: 2px;
 }
 
+h1, h2, h3, h4 {
+	font-weight: 600;
+	font-size: 16px;
+	margin: 0 0 12px;
+}
+
 input:disabled {
-	color: #ccc;
+	color: var(--grey);
 }
 
 input[type="range"] {
@@ -51,9 +70,16 @@ input[type="range"] {
 }
 
 button {
-	color: #333;
-	background-color: #f4f4f4;
+	color: var(--black);
+	background: none;
+	border: 1px solid var(--border);
+	box-shadow: none;
 	outline: none;
+	cursor: pointer;
+}
+
+button:disabled {
+	cursor: no-drop;
 }
 
 button:active {
@@ -62,4 +88,9 @@ button:active {
 
 button:focus {
 	border-color: #666;
+}
+
+.row {
+	display: flex;
+	align-items: center;
 }
